--- a/.github/workflows/build-deploy-webpage.yml
+++ b/.github/workflows/build-deploy-webpage.yml
@@ -32,6 +32,7 @@ jobs:
         node-version: '18'
     - run: |
         cd web
+        npm install
         npm run build
 
     - uses: actions/upload-pages-artifact@v1
