--- a/.github/workflows/build-deploy-webpage.yml
+++ b/.github/workflows/build-deploy-webpage.yml
@@ -18,7 +18,7 @@ jobs:
     - name: inject secrets
       run: |
         cd web
-        sed "s|%GITHUB_TOKEN%|${{ secrets.GIT_TOKEN_PULL_ISSUES }}|g; \
+        sed -i "s|%GITHUB_TOKEN%|${{ secrets.GIT_TOKEN_PULL_ISSUES }}|g; \
         s|%GITHUB_API_REPO_URL%|${{ secrets.GIT_API_REPO_URL }}|g; \
         s|%GITHUB_THESIS_LABEL_ID%|${{ secrets.GIT_THESIS_LABEL_ID }}|g; \
         s|%DONLOAD_THESIS_URL%|${{ vars.DOWNLOAD_THESIS_URL }}|g; \
