Change doc delimeter (#14)

--- a/.github/workflows/build-deploy-webpage.yml
+++ b/.github/workflows/build-deploy-webpage.yml
@@ -35,7 +35,7 @@ jobs:
             if [ -f "$file" ]; then \
                 filename=$(basename -- "${file}"); \
                 title=$(grep "title:" "$file" | sed "s|^title: \(.*\)$|\1|" -); \
-                echo -n "${title}:docs/${filename%.*}.html " >> web/.env.production; \
+                echo -n "${title}:docs/${filename%.*}.html~" >> web/.env.production; \
             fi \
         done
     
