--- a/k8s/ksa/templates/deployment.yaml
+++ b/k8s/ksa/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: ksa
     spec:
       initContainers:
-      - image: aquasec/kube-hunter
+      - image: {{ .Values.deployment.hunter.image }}
         name: kube-hunter
         command: ["/bin/sh"]
         args: ["-c", "kube-hunter --pod >/var/www/kube-hunter.txt"]
