--- a/k8s/ksa/templates/ingress.yaml
+++ b/k8s/ksa/templates/ingress.yaml
@@ -1,14 +1,17 @@
+{{- if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ksa-ingress
-  namespace: baseline
+  namespace: {{ .Values.namespace.name }}
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    kubernetes.io/ingress.class: addon-http-application-routing
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: "{{ .Release.Name }}.{{ .Values.ingress.host }}"
+    http:
       paths:
       - path: /
         pathType: Prefix
@@ -17,3 +20,4 @@ spec:
             name: ksa-svc
             port:
               number: 8080
+{{- end }}
