--- a/k8s/demo/templates/postgres.yaml
+++ b/k8s/demo/templates/postgres.yaml
@@ -9,6 +9,7 @@ spec:
   selector:
     matchLabels:
       app: {{ .Values.database.sts.name }}
+  serviceName: {{ .Values.database.service.name }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
