fix subjects and users api communication

--- a/k8s/demo-subjects/templates/backend.yaml
+++ b/k8s/demo-subjects/templates/backend.yaml
@@ -33,6 +33,7 @@ spec:
       initContainers:
         - name: {{ .Values.backend.init.name }}
           image: {{ .Values.backend.init.image }}
+          imagePullPolicy: IfNotPresent
           command: 
           - "sh"
           - "-c"
