display subjects for each user

--- a/k8s/demo-users/values.yaml
+++ b/k8s/demo-users/values.yaml
@@ -33,6 +33,10 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+subjects:
+  host: demo-backend.demo-subjects.svc.cluster.local
+  port: 8088
+
 backend:
   init:
     image: busybox
