--- a/k8s/demo-users/templates/frontend.yaml
+++ b/k8s/demo-users/templates/frontend.yaml
@@ -33,8 +33,10 @@ spec:
       containers:
         - name: {{ .Chart.Name }}
           env:
-            - name: API_BASE_URL
-              value: "http://{{ .Values.backend.service.name }}:{{ .Values.backend.service.port }}"
+          - name: USERS_API_BASE_URL
+            value: "http://{{ .Values.backend.service.name }}:{{ .Values.backend.service.port }}"
+          - name: SUBJECTS_API_BASE_URL
+            value: "http://{{ .Values.subjects.host }}:{{ .Values.subjects.port }}"
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag | default .Chart.AppVersion }}"
