Trivy and kube-bench tests (#23 & #24)

--- a/k8s/demo-users/templates/serviceaccount.yaml
+++ b/k8s/demo-users/templates/serviceaccount.yaml
@@ -17,7 +17,7 @@ metadata:
   name: {{ include "demo.serviceAccountName" . }}-rolebinding
 subjects:
 - kind: ServiceAccount
-  name: log-reader
+  name: {{ include "demo.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
