--- a/.github/workflows/build-deploy-webpage.yml
+++ b/.github/workflows/build-deploy-webpage.yml
@@ -23,9 +23,9 @@ jobs:
         sed -i "s|%GITHUB_TOKEN%|${{ secrets.TOKEN_PULL_ISSUES }}|g; \
         s|%GITHUB_API_REPO_URL%|${{ secrets.API_REPO_URL }}|g; \
         s|%GITHUB_THESIS_LABEL_ID%|${{ secrets.THESIS_LABEL_ID }}|g; \
-        s|%DONLOAD_THESIS_URL%|${{ vars.DOWNLOAD_THESIS_URL }}|g; \
-        s|%DOWNLOAD_DEMO_URL%|${{ vars.DOWNLOAD_SEMINAR_PRESENTATION_URL }}|g; \
-        s|%DOWNLOAD_SOURCE_CODE_URL%|${{ vars.DOWNLOAD_DEMO_URL }}|g" .env.production
+        s|%DOWNLOAD_THESIS_URL%|${{ vars.DOWNLOAD_THESIS_URL }}|g; \
+        s|%DOWNLOAD_SEMINAR_PRESENTATION_URL%|${{ vars.DOWNLOAD_SEMINAR_PRESENTATION_URL }}|g; \
+        s|%DOWNLOAD_DEMO_URL%|${{ vars.DOWNLOAD_DEMO_URL }}|g" .env.production
 
     - name: inject docs list
       run: |
