--- a/k8s/ksa/templates/configmap.yaml
+++ b/k8s/ksa/templates/configmap.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 data:
   index.html: |-
     <h1>Kubernetes Security Assessment</h1>
-    <h3>Current security level: <span style="color: {{ .Values.info.color }}">{{ .Values.info.securityLevel }}</span></h3>
     <br/>
     <h2>Security reports:</h2>
     <ul>
-    <li><a href="./kube-hunter.txt">Kube-hunter</a></li>
+    <li><a href="./trivy-scan-results/trivy.json">Trivy</a></li>
+    <li><a href="./kube-bench-scan-results/kube-bench.json">Kube-bench</a></li>
     </ul>
 kind: ConfigMap
 metadata:
   name: {{ .Values.configmap.name }}
-  namespace: {{ .Values.namespace.name }}
+  namespace: {{ .Release.Namespace }}
