--- a/k8s/ksa/templates/service.yaml
+++ b/k8s/ksa/templates/service.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/managed-by: Helm
   name: {{ .Values.service.name }}
-  namespace: {{ .Values.namespace.name }}
+  namespace: {{ .Release.Namespace }}
 spec:
   type: {{ .Values.service.type }}
   ports:
