--- a/k8s/ksa/templates/kube-bench.yaml
+++ b/k8s/ksa/templates/kube-bench.yaml
@@ -10,7 +10,7 @@ spec:
       storage: {{ .Values.kubebench.storage.size }}
 
 ---
-
+{{- if eq .Values.kubebench.deploy true}}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -108,3 +108,4 @@ spec:
         - hostPath:
             path: /opt/cni/bin/
           name: opt-cni-bin
+{{- end }}
