--- a/k8s/ksa/values.yaml
+++ b/k8s/ksa/values.yaml
@@ -39,12 +39,13 @@ parser:
     port: 8123
     targetPort: 8000
   volumes:
+    basepath: /opt/scan
     trivy:
       name: trivy-data
-      path: /opt/trivy-data
+      path: /opt/scan/trivy
     kubebench:
       name: kubebench-data
-      path: /opt/kubebench-data
+      path: /opt/scan/kubebench
 
 aggregator:
   image: ksa/aggregator:latest
@@ -53,3 +54,37 @@ aggregator:
     type: LoadBalancer
     port: 8124
     targetPort: 8000
+
+database:
+  service:
+    type: LoadBalancer
+    port: 5432
+    name: postgres
+  cm:
+    name: postgres-config
+  secret:
+    name: postgres-secret
+  sts:
+    name: postgres
+    image:
+      repository: ksa/postgres
+      pullPolicy: IfNotPresent
+    volumes:
+    - name: postgres
+      persistentVolumeClaim:
+        claimName: postgres-data
+    volumeMounts:
+    - name: postgres
+      mountPath: /var/lib/postgresql/data
+    readinessProbe:
+      exec:
+        command:
+        - "/usr/bin/pg_isready"
+      initialDelaySeconds: 10
+      periodSeconds: 5
+    livenessProbe:
+      exec:
+        command:
+        - "/usr/bin/pg_isready"
+      initialDelaySeconds: 10
+      periodSeconds: 5
