--- a/docker/demo-users/backend/Dockerfile
+++ b/docker/demo-users/backend/Dockerfile
@@ -1,3 +1,4 @@
+# use latest image tag
 FROM gradle:latest AS builder
 
 WORKDIR /opt/app
@@ -9,8 +10,15 @@ RUN gradle bootJar --rerun-tasks --no-build-cache
 
 FROM openjdk:17-oracle
 
+# sensitive information in environment variables
+ENV DB_USERNAME=postgres
+ENV DB_PASSWORD=postgres
+
 COPY --from=builder /opt/app/build/libs/demo-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
+
+# run as root
+USER root
 
 ENTRYPOINT ["java", "-jar", "app.jar", "--debug"]
