--- a/k8s/demo-users/templates/networkpolicy.yaml
+++ b/k8s/demo-users/templates/networkpolicy.yaml
@@ -10,5 +10,5 @@ spec:
   - Ingress
   ingress:
   - from:
-  # 1.3. Network Policies
+  # 1.3. Misconfigured Network Policies
     - podSelector: {}
