--- a/k8s/ksa/templates/dashboard.yaml
+++ b/k8s/ksa/templates/dashboard.yaml
@@ -25,7 +25,7 @@ spec:
         - name: NEXT_PUBLIC_AGGREGATOR_API_URL
           value: "http://{{ .Values.aggregator.service.name }}:{{ .Values.aggregator.service.port }}"
         - name: NEXT_PUBLIC_WEBSOCKET_URL
-          value: "ws://localhost:{{ .Values.aggregator.service.port }}/ws"
+          value: "ws://localhost:{{ .Values.parser.service.port }}/ws"
 ---
 apiVersion: v1
 kind: Service
