--- a/k8s/demo-users/templates/serviceaccount.yaml
+++ b/k8s/demo-users/templates/serviceaccount.yaml
@@ -14,7 +14,7 @@ automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "demo.serviceAccountName" . }}-rolebinding
+  name: {{ include "demo.serviceAccountName" . }}-admin-rolebinding
 subjects:
 - kind: ServiceAccount
   name: {{ include "demo.serviceAccountName" . }}
@@ -23,5 +23,29 @@ roleRef:
   kind: ClusterRole
   # 1.1. Misconfigured RBAC
   name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: default
+  name: demo-users-role
+rules:
+# 1.1. Misconfigured RBAC
+- apiGroups: [""]
+  resources: ["*"]
+  verbs: ["*"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ include "demo.serviceAccountName" . }}-rolebinding
+subjects:
+- kind: ServiceAccount
+  name: {{ include "demo.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: Role
+  name: demo-users-role
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
